Closed Bug 497680 Opened 16 years ago Closed 16 years ago

Fix FolderUriFromDirInProfile to just try to match paths

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0b3

People

(Reporter: rain1, Assigned: rain1)

References

(Regressed 1 open bug)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
We're trying to be a bit clever here by matching the server first. Unfortunately, there are cases where the URI doesn't match the folder path.
Attachment #382813 - Flags: superreview?(bienvenu)
Attachment #382813 - Flags: review?(bienvenu)
Comment on attachment 382813 [details] [diff] [review] patch need to check if this fails: + nsCOMPtr<nsIArray> folderArray; + accountManager->GetAllFolders(getter_AddRefs(folderArray)); r/sr=me, with that fixed.
Attachment #382813 - Flags: superreview?(bienvenu)
Attachment #382813 - Flags: superreview+
Attachment #382813 - Flags: review?(bienvenu)
Attachment #382813 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0b3
Depends on: 499446
Depends on: 545126
Depends on: 563677
No longer depends on: 563677
Regressions: 563677
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: