Bug 497680 - Fix FolderUriFromDirInProfile to just try to match paths. r+sr=bienvenu